--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,30 @@
   text-align: center;
 }
 
-.App-logo {
+.Nav-Elem{
+  background-color: rgba(153,153,255,0.75);
+  margin-right: 5px;
+  font-family: 'Microsoft Yi Baiti';
+  font-size: 30px;
+}
+
+.Nav-Elem:hover{
+  /* background-color: rgba(102, 102, 204, 0.247); */
+  background-color: rgb(147, 147, 255);
+}
+
+.text{
+  color: black;
+}
+
+@media screen and (max-width: 640px) {
+  .Nav-Elem{
+    margin-right: 0px;
+    font-size: 31px;
+  }
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +58,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
