--- a/src/Main.css
+++ b/src/Main.css
@@ -49,15 +49,41 @@
 #time-text1{
     position: fixed;
     top: 70%;
-    left: 40%;
+    left: 30%;
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
 }
+
 #time-text2{
     position: fixed;
     top: 70%;
-    left: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Microsoft Yi Baiti';
+    font-size: 28px;
+}
+#time-text3{
+    position: fixed;
+    top: 70%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    font-family: 'Microsoft Yi Baiti';
+    font-size: 28px;
+}
+#time-text4{
+    position: fixed;
+    top: 63%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Microsoft Yi Baiti';
+    font-size: 28px;
+}
+
+#time-text5{
+    position: fixed;
+    top: 63%;
+    left: 25%;
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
@@ -71,6 +97,16 @@
     height: 5%;
     transform: translate(-50%, -50%);
     background: rgb(102,102,204,0.6) ;
+    font-family: 'Microsoft Yi Baiti';
+    font-size: 30px;
+}
+#below_bottom{
+    position: fixed;
+    top: 90%;
+    left: 60%;
+    width: 100%;
+    height: 5%;
+    transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 30px;
 }
