--- a/src/Main.css
+++ b/src/Main.css
@@ -31,7 +31,7 @@
 
 #text{
     position: fixed;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
@@ -53,6 +53,11 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
+    cursor: pointer;
+}
+
+#time-text1:hover{
+    background-color: rgba(153,153,255,0.75) ;
 }
 
 #time-text2{
@@ -62,7 +67,13 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
+    cursor: pointer;
 }
+
+#time-text2:hover{
+    background-color: rgba(153,153,255,0.75) ;
+}
+
 #time-text3{
     position: fixed;
     top: 70%;
@@ -70,7 +81,13 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
+    cursor: pointer;
 }
+
+#time-text3:hover{
+    background-color: rgba(153,153,255,0.75) ;
+}
+
 #time-text4{
     position: fixed;
     top: 63%;
@@ -78,6 +95,11 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
+    cursor: pointer;
+}
+
+#time-text4:hover{
+    background-color: rgba(153,153,255,0.75) ;
 }
 
 #time-text5{
@@ -87,6 +109,11 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
+    cursor: pointer;
+}
+
+#time-text5:hover{
+    background-color: rgba(153,153,255,0.75) ;
 }
 
 #bottom{
@@ -94,11 +121,11 @@
     top: 80%;
     left: 50%;
     width: 100%;
-    height: 5%;
+    height: 9%;
     transform: translate(-50%, -50%);
     background: rgb(102,102,204,0.6) ;
     font-family: 'Microsoft Yi Baiti';
-    font-size: 30px;
+    /* font-size: 30px; */
 }
 #below_bottom{
     position: fixed;
@@ -109,6 +136,32 @@
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 30px;
+}
+
+#time_label{
+    ;
+}
+
+#slider{
+    width: 50%;
+}
+
+#sound_buttons{
+    padding-right: 10px;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+#sound_elements{
+    font-size: 25px;
+    cursor: pointer;
+}
+
+#sound_List{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    left: 70%
 }
 
 @media screen and (max-width: 640px) {
