--- a/src/Main.css
+++ b/src/Main.css
@@ -37,16 +37,16 @@
     font-family: 'Microsoft Yi Baiti';
 }
 
-/* #time-opt{
+#time-opt{
     position: fixed;
-    top: 70%;
-    left: 55%;
+    top: 77%;
+    left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 28px;
-} */
+}
 
-#time-text1{
+/* #time-text1{
     position: fixed;
     top: 70%;
     left: 30%;
@@ -57,7 +57,7 @@
 }
 
 #time-text1:hover{
-    background-color: rgba(153,153,255,0.75) ;
+    font-weight: bolder;
 }
 
 #time-text2{
@@ -71,7 +71,7 @@
 }
 
 #time-text2:hover{
-    background-color: rgba(153,153,255,0.75) ;
+    font-weight: bolder;
 }
 
 #time-text3{
@@ -85,7 +85,7 @@
 }
 
 #time-text3:hover{
-    background-color: rgba(153,153,255,0.75) ;
+    font-weight: bolder;
 }
 
 #time-text4{
@@ -99,7 +99,7 @@
 }
 
 #time-text4:hover{
-    background-color: rgba(153,153,255,0.75) ;
+    font-weight: bolder;
 }
 
 #time-text5{
@@ -113,12 +113,12 @@
 }
 
 #time-text5:hover{
-    background-color: rgba(153,153,255,0.75) ;
-}
+    font-weight: bolder;
+} */
 
 #bottom{
     position: fixed;
-    top: 80%;
+    top: 85%;
     left: 50%;
     width: 100%;
     height: 9%;
@@ -127,19 +127,24 @@
     font-family: 'Microsoft Yi Baiti';
     /* font-size: 30px; */
 }
+
+#input_forms{
+    display: flex;
+}
+
+#label{
+    font-weight: bolder;
+}
+
 #below_bottom{
     position: fixed;
-    top: 90%;
-    left: 60%;
-    width: 100%;
+    top: 85%;
+    left: 50%;
+    /* width: 100%; */
     height: 5%;
     transform: translate(-50%, -50%);
     font-family: 'Microsoft Yi Baiti';
     font-size: 30px;
-}
-
-#time_label{
-    ;
 }
 
 #slider{
@@ -152,9 +157,17 @@
     cursor: pointer;
 }
 
+#sound_buttons:hover{
+    font-weight: bolder;
+}
+
 #sound_elements{
     font-size: 25px;
     cursor: pointer;
+}
+
+#sound_elements:hover{
+    font-weight: bolder;
 }
 
 #sound_List{
