Fixing some of the styling and code

--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,24 @@
 }
 
 .Nav-Elem{
-  background-color: rgba(153,153,255,0.75);
-  margin-right: 5px;
   font-family: 'Microsoft Yi Baiti';
   font-size: 30px;
 }
 
 .Nav-Elem:hover{
-  /* background-color: rgba(102, 102, 204, 0.247); */
   background-color: rgb(147, 147, 255);
+}
+
+.active{
+  font-weight: bold;
+  background-color: rgba(153,153,255,0.75);
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 #Nav-Elem-Title{
   font-family: 'Microsoft YaHei Light';
   font-size: 30px;
-  font-weight: bold;
-  margin-right: 5px;
 }
 
 #Nav-Elem-Title:hover{
@@ -35,38 +37,3 @@
     font-size: 31px;
   }
 }
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
