--- a/src/Schedule.css
+++ b/src/Schedule.css
@@ -2,11 +2,6 @@
     margin-top: 70px;
 }
 
-#input_area{
-    left:50%;
-    /* text-align: center; */
-}
-
 #delete:hover{
     cursor: pointer;
     font-weight: bold;
@@ -18,16 +13,12 @@
     font-weight: bold;
 }
 
-.field{
-    padding-left: 50px;
-}
-
-#background{
+.background{
     background-color: rgba(153,153,255,0.75) ;
     margin-bottom: 5px;
     padding-top: 10px;
-    padding-left: 30px;
     width: 100%;
+    justify-content: center;
 }
 
 .label{
@@ -36,3 +27,10 @@
     font-weight: bold;
     font-size: 25px;
 }
+
+@media screen and (max-width: 800px) {
+    .background{
+        width: 100%;
+        justify-content: center;
+    }
+  }
